welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:28: error: too many arguments for method faireW: ()Unit
					faireW(c)
                                              ^MethodsPicture:35: error: not enough arguments for method faireV3: (c: java.awt.Color)Unit.
Unspecified value parameter c.
					faireV3() 
                                               ^